Remove .toList as part of java downgrade