@@ -18,13 +18,13 @@ class ExceptionRangeUtilsHourToRangeTest {
   @Test
   void testNoOverlaps() {
     assertThat(
-      ExceptionRangeUtils.toTemporalRanges(new ArrayList<>()).toList(),
+      ExceptionRangeUtils.toTemporalRanges(new ArrayList<>()).collect(Collectors.toList()),
       containsInAnyOrder()
     );
     assertThat(
       ExceptionRangeUtils
         .toTemporalRanges(Arrays.asList(ExceptionHours.OPEN_ALL_DAY_JAN_1_THRU_JAN_4))
-        .toList(),
+        .collect(Collectors.toList()),
       containsInAnyOrder(
         new TemporalRange<>(
           ExceptionHours.OPEN_ALL_DAY_JAN_1_THRU_JAN_4,
@@ -43,7 +43,7 @@ class ExceptionRangeUtilsHourToRangeTest {
             ExceptionHours.OPEN_15_00_TO_23_00_JAN_4
           )
         )
-        .toList(),
+        .collect(Collectors.toList()),
       containsInAnyOrder(
         new TemporalRange<>(
           ExceptionHours.OPEN_00_00_TO_14_59_JAN_1,
